--- a/index.html
+++ b/index.html
@@ -5,21 +5,51 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
-    rel="stylesheet" 
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
-    crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <!-- ****** faviconit.com favicons ****** -->
+	<link rel="shortcut icon" href="./resources/favicon.ico">
+	<link rel="icon" sizes="16x16 32x32 64x64" href="./resources/favicon.ico">
+	<link rel="icon" type="image/png" sizes="196x196" href="./resources/favicon-192.png">
+	<link rel="icon" type="image/png" sizes="160x160" href="./resources/favicon-160.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="./resources/favicon-96.png">
+	<link rel="icon" type="image/png" sizes="64x64" href="./resources/favicon-64.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="./resources/favicon-32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./resources/favicon-16.png">
+	<link rel="apple-touch-icon" href="./resources/favicon-57.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="./resources/favicon-114.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="./resources/favicon-72.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="./resources/favicon-144.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="./resources/favicon-60.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="./resources/favicon-120.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="./resources/favicon-76.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="./resources/favicon-152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="./resources/favicon-180.png">
+	<meta name="msapplication-TileColor" content="#FFFFFF">
+	<meta name="msapplication-TileImage" content="./resources/favicon-144.png">
+	<meta name="msapplication-config" content="./resources/browserconfig.xml">
+	<!-- ****** faviconit.com favicons ****** -->
+
+  <link href="./resources/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="./resources/css/bootstrap-icons.css">
 
   <title>saihyou</title>
 </head>
 <body class="bg-dark">
   <div class="text-bg-dark text-center container">
-    <h1 class="my-5 fw-bold"><i class="bi bi-house-dash"></i>&nbsp;saihyou.dev is coming soon. I just wanted to make sure that Bootstrap is at least working.</h1>
+    <h1 class="mt-5 mb-3 fw-bold"><i class="bi bi-snow2"></i></h1>
+    <h2 class="fw-bold mb-5 fs-1">saihyou</h2>
+    <div class="container-fluid d-flex flex-column align-items-center">
+      <a href="https://twitter.com/saihyou_dev" class="btn btn-lg btn-dark fs-4 border border-1 border-light border-opacity-50 mb-3" target="_blank">
+        <i class="bi bi-twitter"></i>&nbsp;twitter
+      </a>
+      <a href="https://github.com/saihyou72" class="btn btn-lg btn-dark fs-4 border border-1 border-light border-opacity-50 mb-3" target="_blank">
+        <i class="bi bi-github"></i>&nbsp;github
+      </a>
+      <a href="https://portfolio-blog.saihyou.dev/main.do" class="btn btn-lg btn-dark fs-4 border border-1 border-light border-opacity-50 mb-3" target="_blank">
+        <i class="bi bi-file-earmark-post-fill"></i>&nbsp;portfolio 1: blog sample
+      </a>
+    </div>
   </div>
   
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" 
-    crossorigin="anonymous"></script>
+  <script src="./resources/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
