--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <a href="https://github.com/saihyou72" class="btn btn-lg btn-dark fs-4 border border-1 border-light border-opacity-50 mb-3" target="_blank">
         <i class="bi bi-github"></i>&nbsp;github
       </a>
-      <a href="https://portfolio-blog.saihyou.dev/main.do" class="btn btn-lg btn-dark fs-4 border border-1 border-light border-opacity-50 mb-3" target="_blank">
+      <a href="https://portfolio1.saihyou.dev/" class="btn btn-lg btn-dark fs-4 border border-1 border-light border-opacity-50 mb-3" target="_blank">
         <i class="bi bi-file-earmark-post-fill"></i>&nbsp;portfolio 1: blog sample
       </a>
     </div>
