--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
 </head>
 <body class="bg-dark">
   <div class="text-bg-dark text-center container">
-    <h1 class="mt-5 mb-3 fw-bold"><i class="bi bi-snow2"></i></h1>
-    <h2 class="fw-bold mb-5 fs-1">saihyou</h2>
+    <div class="my-5 container-fluid d-flex flex-column align-items-center">
+      <h1 class="mb-5 fw-bold"><i class="bi bi-snow2"></i></h1>
+      <h2 class="fw-bold mb-2 fs-1">Kyuhyun Shim</h2>
+      <a href="mailto:carl-czerny50@saihyou.dev" class="btn btn-sm btn-dark" target="_blank"><i class="bi bi-envelope"></i>&nbsp;carl-czerny50@saihyou.dev</a>
+    </div>
     <div class="container-fluid d-flex flex-column align-items-center">
       <a href="https://twitter.com/saihyou_dev" class="btn btn-lg btn-dark fs-4 border border-1 border-light border-opacity-50 mb-3" target="_blank">
         <i class="bi bi-twitter"></i>&nbsp;twitter
