Let the translation go

--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
             aria-expanded="true" 
             aria-controls="collapseOne">
             <div class="fw-bold fs-3">
-              <span lang="en">
+              <div lang="en">
                 About Me
-              </span>
-              <span lang="ko">
+              </div>
+              <div lang="ko">
                 자기소개
-              </span>
-              <span lang="ja">
+              </div>
+              <div lang="ja">
                 自己紹介
-              </span>
+              </div>
             </div>
           </button>
         </h2>
@@ -114,14 +114,7 @@
                         <li>自作PCコミュニティで活動するのも結構好きで、</li>
                       </ul>
                     </li>
-                    <li><b><i class="bi bi-star-fill"></i>セルフホスティング</b>：下の<a href="javascript:toSelfhost();" class="text-light fw-bold">「セルフホスティング？」</a>セクションで説明します。
-                      <!-- 最近結構ハマっています。万能技術Dockerを使ってポートフォリオ用のサンプルサイト、それらに関するデータベース、ウェブアプリケーションサーバーなどをすべてコンテナで導入し、リバースプロキシでサブドメインを指定しました。Webサーバー以外にも私自身の便利のためパスワードマネージャー、二段階認証、Gitレポジトリー管理をセルフホスティングでやっています。
-                      <ul>
-                        <li>
-                          <small>ちなみに、このポートフォリオページはGitHub Pagesを使ってデプロイしています。(レポジトリーは <a href="https://github.com/saihyou72/saihyou72.github.io" class="text-light fw-bold" target="_blank"><i class="bi bi-box-arrow-up-right"></i>こちら</a>)静的サイトなんですから、簡単に構築したかったので。それをCloudflareにメインドメインとして登録しました。</small>
-                        </li>
-                      </ul> -->
-                    </li>
+                    <li><b><i class="bi bi-star-fill"></i>セルフホスティング</b>：下の<a href="javascript:toSelfhost();" class="text-light fw-bold">「セルフホスティング？」</a>セクションで説明します。</li>
                     <li>音楽鑑賞：フューチャーベース大好きです！</li>
                     <li>ゲーム：自作PC趣味との相性が非常に高いです。もちろんスイッチもプレステも持っています。</li>
                     <li>パワーウォーキング：「全身で歩く」運動です。簡単そうに見えて実際にもそうなんですが、面白いところも結構あると思います。</li>
@@ -148,28 +141,28 @@
             aria-expanded="false" 
             aria-controls="collapseTwo">
             <div class="fw-bold fs-3">
-              <span lang="en">
+              <div lang="en">
                 Skills
-              </span>
-              <span lang="ko">
+              </div>
+              <div lang="ko">
                 전문지식
-              </span>
-              <span lang="ja">
+              </div>
+              <div lang="ja">
                 専門知識
-              </span>
+              </div>
             </div>
           </button>
         </h2>
         <div id="collapseTwo" 
           class="accordion-collapse collapse">
           <div class="accordion-body">
-            <span lang="en">
+            <div lang="en">
               WIP
-            </span>
-            <span lang="ko">
+            </div>
+            <div lang="ko">
               WIP
-            </span>
-            <span lang="ja">
+            </div>
+            <div lang="ja">
               <ul>
                 <li><b>Java</b>：1.8で学びました。専門的な教育を受けて、プロジェクトをしたこともあります。
                   <ul>
@@ -197,7 +190,7 @@
                 <li><b>C/C++</b>：専攻必須科目として学びました。基本だけ知っています。</li>
                 <li><b>Python</b>：基本だけ知っています。</li>
               </ul>
-            </span>
+            </div>
           </div>
         </div>
       </div>
@@ -209,28 +202,28 @@
             aria-expanded="false" 
             aria-controls="collapseThree">
             <div class="fw-bold fs-3">
-              <span lang="en">
+              <div lang="en">
                 Portfolio
-              </span>
-              <span lang="ko">
+              </div>
+              <div lang="ko">
                 포트폴리오
-              </span>
-              <span lang="ja">
+              </div>
+              <div lang="ja">
                 ポートフォリオ
-              </span>
+              </div>
             </div>
           </button>
         </h2>
         <div id="collapseThree" 
           class="accordion-collapse collapse">
           <div class="accordion-body">
-            <span lang="en">
-              Portfolio
-            </span>
-            <span lang="ko">
-              포트폴리오
-            </span>
-            <span lang="ja">
+            <div lang="en">
+              WIP
+            </div>
+            <div lang="ko">
+              WIP
+            </div>
+            <div lang="ja">
               <ol>
                 <li><b>ブログプロジェクト</b>
                   <ul>
@@ -258,11 +251,11 @@
                   </ul>
                 </li>
               </ol>
-            </span>
+            </div>
           </div>
         </div>
       </div>
-      <div class="accordion-item" lang="ja">
+      <div class="accordion-item">
         <h2 class="accordion-header">
           <button class="accordion-button collapsed" 
             id="buttonFour"
@@ -272,30 +265,57 @@
             aria-expanded="false" 
             aria-controls="collapseFour">
             <div class="fw-bold fs-3">
-              <span lang="en">
+              <div lang="en">
                 Self Hosting?
-              </span>
-              <span lang="ko">
+              </div>
+              <div lang="ko">
                 셀프호스팅?
-              </span>
-              <span lang="ja">
+              </div>
+              <div lang="ja">
                 セルフホスティング？
-              </span>
+              </div>
             </div>
           </button>
         </h2>
         <div id="collapseFour" 
           class="accordion-collapse collapse">
           <div class="accordion-body">
-            <span lang="en">
+            <div lang="en">
               WIP
-            </span>
-            <span lang="ko">
+            </div>
+            <div lang="ko">
               WIP
-            </span>
-            <span lang="ja">
-              WIP
-            </span>
+            </div>
+            <div lang="ja">
+              <ul>
+                <li>最近結構ハマっています。万能技術Dockerを使って…
+                  <ul>
+                    <li>ポートフォリオ用のサンプルサイト</li>
+                    <li>それらに関するデータベース(Oracle 11g XE)</li>
+                    <li>ウェブアプリケーションサーバー(Apache Tomcat)</li>
+                  </ul>
+                </li>
+                <li>などをすべてコンテナで導入し、リバースプロキシ(Nginx Proxy Manager)でサブドメインを指定しました。</li>
+                <li>Webサーバー以外にも私自身の便利のため
+                  <ul>
+                    <li>パスワードマネージャー及び二段階認証(BitWarden)</li>
+                    <li>Gitリポジトリ管理(Gogs)</li>
+                    <li>CI/CDパイプライン(Jenkins)</li>
+                  </ul>
+                </li>
+                <li>などもセルフホスティングでやっています。</li>             
+                <li>
+                  ちなみに、このポートフォリオページはGitHub Pagesを使ってデプロイしています。(リポジトリは <a href="https://github.com/saihyou72/saihyou72.github.io" class="text-light fw-bold" target="_blank"><i class="bi bi-box-arrow-up-right"></i>こちら</a>)
+                  <ul>
+                    <li>静的サイトなんですから、簡単に構築したかったので。</li>
+                    <li>saihyou.devというドメインはGoogle Domainsで買いました。</li>
+                    <li>それをCloudflareにメインドメインとして登録しまして、</li>
+                    <li>サブドメインもCloudFlareで管理して、Nginx Proxy Managerが内部アプリケーションにルーティングします。</li>
+                  </ul>                  
+                </li>
+                <li>今はデータバックアップ用で使っているSynology NASのDockerを使っていますが、将来には独立サーバーを構築したいと思います。</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
