Let the translation go - 2

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                   <ul>
                     <li>自作PC組み立て：一番長らく持っている趣味です。可処分所得のほとんどがこれに使われます。
                       <ul>
-                        <li>自作PCコミュニティで活動するのも結構好きで、</li>
+                        <li>自作PCコミュニティで活動するのも結構好きです。</li>
                       </ul>
                     </li>
                     <li><b><i class="bi bi-star-fill"></i>セルフホスティング</b>：下の<a href="javascript:toSelfhost();" class="text-light fw-bold">「セルフホスティング？」</a>セクションで説明します。</li>
