Added translations(some of)

--- a/index.html
+++ b/index.html
@@ -89,12 +89,81 @@
           class="accordion-collapse collapse show">
           <div class="accordion-body">
             <div lang="en">
-              WIP
+              <ul>
+                <li><b>Name</b>: Kyuhyun Shim</li>
+                <li><b>Education and Career</b>
+                  <ul>
+                    <li>(2013.03~2022.02) Majored physics in Yonsei University(Seoul, Korea)</li> 
+                    <li>(2018.03~2018.08) GoniGlobal(eCommerce company) as a translator(English ↔ Korean ↔ Japanese)</li>
+                    <li>(2022.09~2023.05) Graduated Hybrid Software Professional Course, in JSL Human Resources Institute(Daejeon, Korea)</li>
+                  </ul>
+                </li>
+                <li><b>Hobbies</b>
+                  <ul>
+                    <li>DIY PC: My longest hobby. I spend nearly all of my disposable income in this.
+                      <ul>
+                        <li>And like to communicate with other PC enthusiasts in forums.</li>
+                      </ul>
+                    </li>
+                    <li><b><i class="bi bi-star-fill"></i>Self hosting</b>: More on that later, in <a href="javascript:toSelfhost();" class="text-light fw-bold">「Self Hosting?」</a> section.</li>
+                    <li>Listening to music: I absolutely LOVE future/kawaii bass.</li>
+                    <li>PC gaming: Why wouldn't I? Perfect match for DIY PC hobby. I also enjoy Switch and PlayStation games, too.</li>
+                    <li>Power walking: Not just walking, walking with "power". Sounds simple, and actually it is, but there's a lot interesting things on that.</li>
+                  </ul>
+                </li>
+                <li><b>Certifications</b>
+                  <ul>
+                    <li>(2018.01) JLPT(Japanese Language Proficiency Test) N1</li>
+                    <li>(2022.07) TOEIC 920</li>
+                    <li>(2023.05) Industrial Engineer Information Processing</li>
+                  </ul>
+                </li>
+                <li><b>I'm good at...(aside from tech)</b>
+                  <ul>
+                    <li><b>Teaching something</b>：When in JSL, where I recieved programming course, I had some background in coding because of requied courses in uni. So I didn't have that much trouble understanding Java firsthand. But since my colleages in the same course had zero experiences in coding whatsoever, they were in big trouble. So I made an <a class="text-light fw-bold" target="_blank" href="https://github.com/Kade-JSL/JSL56-Lectures"><i class="bi bi-box-arrow-up-right"></i>GitHub repo(in Korean, obviously)</a> of lecture memos, source codes of homework, and other docs to help my colleages. I like to help people to understand something, and outside of helping someone, I'm very into organizing docs, generally speaking.</li>
+                    <li>Japanese: Not manga or anime level, I mean business. Did japanese for jobs, can talk to Japanese people without any linguistic difficulties. Also this site is in Korean and Japanese, all translated by myself.</li>
+                    <li>Searching: I generally like searching the web. From jellyfishes' ecology, to Volcano research facilities in Kagoshima, whatever my curiosity desires.</li>
+                  </ul>
+                </li>
+              </ul>
             </div>
             <div lang="ko">
               <ul>
-                <li>이름: 심규현</li>
-                <li>WIP</li>
+                <li><b>이름</b>: 심규현</li>
+                <li><b>학력 및 경력</b>
+                  <ul>
+                    <li>(2013.03~2022.02) 연세대학교 물리학과</li> 
+                    <li>(2018.03~2018.08) 고니글로벌 아르바이트(번역가, 영어 및 일본어 번역)</li>
+                    <li>(2022.09~2023.05) JSL인재개발원 하이브리드소프트웨어전문가과정 56기 수료</li>
+                  </ul>                  
+                </li>
+                <li><b>자격증, 어학</b>
+                  <ul>
+                    <li>(2018.01) 일본어능력시험(JLPT) N1</li>
+                    <li>(2022.07) TOEIC 920점</li>
+                    <li>(2023.05) 과정평가형 정보처리산업기사</li>
+                  </ul>
+                </li>
+                <li><b>취미</b>
+                  <ul>
+                    <li>PC조립: 가장 오래 하고 있는 취미입니다. 가처분소득의 대부분을 여기 쓰고 있죠.
+                      <ul>
+                        <li>PC 커뮤니티에서 활동하는 것도 좋아합니다.</li>
+                      </ul>
+                    </li>
+                    <li><b><i class="bi bi-star-fill"></i>셀프호스팅</b>：아래의 <a href="javascript:toSelfhost();" class="text-light fw-bold">「셀프호스팅?」</a> 문단에서 설명하겠습니다.</li>
+                    <li>음악감상: 퓨처베이스 완전 좋아합니다.</li>
+                    <li>게임: 게이밍PC를 조립하면 위의 취미와 궁합이 아주 좋습니다. 물론 스위치 게임도 플스 게임도 합니다.</li>
+                    <li>파워워킹: '온몸으로 걷는' 운동 되겠습니다. 간단해 보이고 실제로 그렇습니다만, 꽤나 재밌는 부분도 많습니다.</li>
+                  </ul>
+                </li>
+                <li><b>특기(IT 외)</b>
+                  <ul>
+                    <li><b>가르치는 것</b>: JSL인재개발원에 있을 때의 이야기입니다. 코딩 경험이 없는 동기생들이 Java 이해에 어려움을 겪고 있기에, 수업 시간에 정리해 둔 노트를<a class="text-light fw-bold" target="_blank" href="https://github.com/Kade-JSL/JSL56-Lectures"><i class="bi bi-box-arrow-up-right"></i>GitHub에 공유</a>해 줬었죠. 굳이 문서 형태가 아니더라도 그냥 이해로 곤란해하는 동료들을 도와주는 걸 좋아합니다. 정리하는 것도 특기인 데다가 이해한 걸 다른 사람이랑 공유하는 것도 좋아하거든요.</li>
+                    <li>영어: 번역가로 일한 경험도 있고, 개인적으로도 언어를 배우는 걸 좋아합니다. 이 웹페이지 역시 일본어와 영어 모두 제 손으로 번역되어 있습니다.</li>
+                    <li>검색: 정보검색 자체가 그냥 좋습니다. 뭔가 궁금해지면 뭐든지 바로 검색해 봅니다. 호기심이 풀릴 때까지 멈추지 않고요. 주제도 다시마의 생태부터 최근에 나온 군함까지 다양합니다.</li>
+                  </ul>
+                </li>
               </ul>
             </div>
             <div lang="ja">
@@ -105,7 +174,7 @@
                     <li>(2013.03~2022.02) 延世大学(韓国、ソウル)で物理学専攻</li> 
                     <li>(2018.03~2018.08) GoniGlobal(通販会社) - 翻訳家(アルバイト、英↔韓↔日)</li>
                     <li>(2022.09~2023.05) JSL人材開発院(韓国、大田)でハイブリッドソフトウェア専門家過程を修了</li>
-                  </ul>                  
+                  </ul>
                 </li>
                 <li><b>趣味</b>
                   <ul>
@@ -120,11 +189,18 @@
                     <li>パワーウォーキング：「全身で歩く」運動です。簡単そうに見えて実際にもそうなんですが、面白いところも結構あると思います。</li>
                   </ul>
                 </li>
+                <li><b>資格、言語</b>
+                  <ul>
+                    <li>(2018.01) 日本語能力試験(JLPT) N1</li>
+                    <li>(2022.07) TOEIC 920点</li>
+                    <li>(2023.05) 過程評価型 情報処理産業技師</li>
+                  </ul>
+                </li>
                 <li><b>得意なこと(IT以外)</b>
                   <ul>
-                    <li>教えること：JSL人材開発院で研修を受ける時に、同期の研修生がJavaの理解に苦しまないように、授業中に整理しておいたノートを<a class="text-light fw-bold" target="_blank" href="https://github.com/Kade-JSL/JSL56-Lectures"><i class="bi bi-box-arrow-up-right"></i>GitHubで共有(韓国語ですけど)</a>してあげたことがあります。文書の形以外にも困っている同期生を見たら積極的に教えてあげたりします。なぜならそうやって整理するのが得意ですし、理解したものを他の方たちと共有するのが好きだからです。</li>
-                    <li>英語：翻訳家として働いていましたし、個人的にも言語を学ぶのが好きです。このページも韓国語と英語に対応しています。</li>
-                    <li>検索：情報検索がただ好きです。何か気になったらなんでも検索します。クラゲの生態から、鹿児島市にある火山研究所までそのトピックは様々です。</li>
+                    <li><b>教えること</b>：JSL人材開発院で研修を受ける時に、同期の研修生がJavaの理解に苦しまないように、授業中に整理しておいたノートを<a class="text-light fw-bold" target="_blank" href="https://github.com/Kade-JSL/JSL56-Lectures"><i class="bi bi-box-arrow-up-right"></i>GitHubで共有(韓国語ですけど)</a>してあげたことがあります。文書の形以外にも困っている同期生を見たら積極的に教えてあげたりします。なぜならそうやって整理するのが得意ですし、理解したものを他の方たちと共有するのが好きだからです。</li>
+                    <li>英語：翻訳家として働いていましたし、個人的にも言語を学ぶのが好きです。このページも韓国語と英語に自分で翻訳し、対応しています。</li>
+                    <li>検索：情報検索がただ好きです。何か気になったらなんでも検索します。好奇心が満たされるまで、諦めもせずに。クラゲの生態から、鹿児島市にある火山研究所までそのトピックは様々です。</li>
                   </ul>
                 </li>
               </ul>
@@ -157,10 +233,10 @@
           class="accordion-collapse collapse">
           <div class="accordion-body">
             <div lang="en">
-              WIP
+              WIP(Japanese only yet, sorry...)
             </div>
             <div lang="ko">
-              WIP
+              WIP(아직은 일본어로만 작성되어 있습니다. 죄송합니다.)
             </div>
             <div lang="ja">
               <ul>
@@ -218,10 +294,10 @@
           class="accordion-collapse collapse">
           <div class="accordion-body">
             <div lang="en">
-              WIP
+              WIP(Japanese only yet, sorry...)
             </div>
             <div lang="ko">
-              WIP
+              WIP(아직은 일본어로만 작성되어 있습니다. 죄송합니다.)
             </div>
             <div lang="ja">
               <ol>
@@ -261,9 +337,9 @@
             id="buttonFour"
             type="button" 
             data-bs-toggle="collapse" 
-            data-bs-target="#collapseFour" 
+            data-bs-target="#selfHosting" 
             aria-expanded="false" 
-            aria-controls="collapseFour">
+            aria-controls="selfHosting">
             <div class="fw-bold fs-3">
               <div lang="en">
                 Self Hosting?
@@ -277,14 +353,14 @@
             </div>
           </button>
         </h2>
-        <div id="collapseFour" 
+        <div id="selfHosting" 
           class="accordion-collapse collapse">
           <div class="accordion-body">
             <div lang="en">
-              WIP
+              WIP(Japanese only yet, sorry...)
             </div>
             <div lang="ko">
-              WIP
+              WIP(아직은 일본어로만 작성되어 있습니다. 죄송합니다.)
             </div>
             <div lang="ja">
               <ul>
@@ -326,8 +402,7 @@
   <script src="./resources/js/jquery.min.js"></script>
   <script>
     $(function() {
-      var lang = getLang().substr(0, 2)
-      toggleLang(lang)
+      toggleLang(getLang().substr(0, 2))
     })
 
     var getLang = () => {
@@ -351,8 +426,8 @@
     
     const toSelfhost = () => {
       $('#buttonFour').removeClass('collapsed')
-      $('#collapseFour').addClass('show')
-      location.hash = "#collapseFour";
+      $('#selfHosting').addClass('show')
+      location.hash = "#selfHosting";
     }
   </script>
 </html>
